# bert-telecom

./: .gitignore  Dockerfile  README  class.py  finetune.py  gui.py  pyproject.toml  requirements.txt  supervisord.conf
train/: finetune.py
train/categorization/: train_categorization.py
