[project]
name = "perplexity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "argparse>=1.4.0",
    "chardet>=5.2.0",
    "datasets>=3.6.0",
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "transformers>=4.48.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
